2008-10-16  Full Name  <Email Address>

	* MonoDevelop.Projects.Dom/DomType.cs: set source project dom for
	instantiated types.

2008-10-15  Full Name  <Email Address>

	* MonoDevelop.Projects.Dom/ResolveResult.cs: fixed failing unit test.

2008-10-15  Full Name  <Email Address>

	* MonoDevelop.Projects.Dom/ResolveResult.cs: filtered some members.

2008-10-15  Full Name  <Email Address>

	* MonoDevelop.Projects.Dom/DomProperty.cs:
	* MonoDevelop.Projects.Dom/AbstractMember.cs:
	* MonoDevelop.Projects.CodeGeneration/CodeRefactorer.cs:
	* MonoDevelop.Projects.CodeGeneration/BaseRefactorer.cs:
	* MonoDevelop.Projects.Dom.Serialization/DomPersistence.cs:
	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	Worked on implement  interface feature / fixed explicit interface
	issue.

2008-10-15  Full Name  <Email Address>

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs: fixed failing unit
	test.

2008-10-15  Full Name  <Email Address>

	* MonoDevelop.Projects.Dom/DomCecilType.cs:
	* MonoDevelop.Projects.Dom/ResolveResult.cs:
	* MonoDevelop.Projects.Dom/DomCecilProperty.cs:
	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	fixed 'Bug 435253 - *Lots* of members missing from code completion'.

2008-10-13  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.CodeGeneration/CodeRefactorer.cs: fixed 'Bug
	434126 - Implement interface explicitly doesn't do base interfaces'.

2008-10-13  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.CodeGeneration/BaseRefactorer.cs: fixed interface
	implementation bug.

2008-10-13  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/CompilationUnit.cs:
	* MonoDevelop.Projects.Dom/DomCecilCompilationUnit.cs:
	* MonoDevelop.Projects.Dom.Serialization/AssemblyCodeCompletionDatabase.cs:
	Worked on assembly compilation units.

2008-10-10  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.CodeGeneration/BaseRefactorer.cs: fixed 'Bug