@@ -48,7 +48,7 @@ namespace MonoDevelop.Projects.Dom.Serialization
 	{
 		static protected readonly int MAX_ACTIVE_COUNT = 100;
 		static protected readonly int MIN_ACTIVE_COUNT = 10;
-		static protected readonly int FORMAT_VERSION   = 49;
+		static protected readonly int FORMAT_VERSION   = 51;
 		
 		NamespaceEntry rootNamespace;
 		protected ArrayList references;
