@@ -1,5 +1,15 @@
 2008-10-16  Full Name  <Email Address>
 
+	* MonoDevelop.Projects.Dom/DomType.cs:
+	* MonoDevelop.Projects.Dom/DomCecilMethod.cs:
+	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs:
+	* MonoDevelop.Projects.Dom.Serialization/ClassEntry.cs:
+	* MonoDevelop.Projects.CodeGeneration/CodeRefactorer.cs:
+	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
+	Worked on dom & implement interfaces.
+
+2008-10-16  Full Name  <Email Address>
+
 	* MonoDevelop.Projects.Dom/DomType.cs: set source project dom for
 	instantiated types.
 
